
syntax = "proto3";

package vn.techres.microservice.grpc.java.net_techres_party_api.sync.aloline;

service NestjsSyncAlolineService {
    rpc syncUpdateUser (CustomerAlolineProfileDTO) returns (EmptyDataResponse) {}
    rpc syncBranchReview (BranchReviewModelDTO) returns (EmptyDataResponse) {}
    rpc syncStatusCustomer (StatusUserModelDTO) returns (EmptyDataResponse) {}
    rpc syncAloPointCustomer (AloPointCustomerDTO) returns (EmptyDataResponse) {}
    rpc syncUpdateAvatarUser (UpdateAvatarUserDTO) returns (EmptyDataResponse) {}
}


message Empty {}

message EmptyDataResponse {
    optional int32 status = 1;
    string message = 2;
    Empty data = 3;
}

message UpdateAvatarUserDTO {
    int64 user_id = 1 ;
    string avatar = 2 ;
}

message CustomerAlolineProfileDTO {
    int64 user_id = 1 ;
    string first_name = 2 ;
    string last_name = 3 ;
    string full_name = 4 ; 
    string birthday = 5 ; 
    int32 gender = 6 ; 
    int32 city_id = 7 ;
    int32 district_id = 8 ;
    int32 ward_id = 9;
    int32 status = 10;
    string address_full_text = 11 ; 
    string avatar = 12 ; 
    string email = 13;
    string nick_name = 14;
    string street_name = 15;

}

message BranchReviewModelDTO {
    int32 branch_id = 1 ;
    double average_rating = 2 ;
    double service_rating = 3 ;
    double food_rating = 4 ;
    double price_rating = 5 ;
    double space_rating = 6 ; 
    double hygiene_rating = 7 ; 
    int32 no_of_review = 8 ;
    
}

message StatusUserModelDTO {
    int64 customer_id = 1 ; 
    int32 status = 2; 
}

message AloPointCustomerDTO {
    int64 customer_id = 1 ; 
    int32 alo_point = 2; 
    int32 alo_point_add = 3; 
	int64 customer_new_post_id = 4;
}